--- a/authservice/src/main/resources/application.properties
+++ b/authservice/src/main/resources/application.properties
@@ -21,3 +21,8 @@ services.user-service.url=http://localhost:8006
 # Redis Configuration
 spring.redis.host=localhost
 spring.redis.port=6379
+
+# Eureka Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+
