--- a/authservice/src/main/resources/application-docker.properties
+++ b/authservice/src/main/resources/application-docker.properties
@@ -1,7 +1,7 @@
 # Docker-specific configuration for AuthService
 spring.application.name=authservice
 
-server.port=8080
+server.port=8005
 
 # Database configurations for Docker
 spring.datasource.url=jdbc:mysql://auth-db:3306/auth_db?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
@@ -33,6 +33,7 @@ eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=auth-service
 
-# Actuator for health checks
+# Actuator Configuration
 management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=when-authorized 
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true 
