--- a/authservice/src/main/resources/application.properties
+++ b/authservice/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.redis.port=6379
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+
