--- a/mealservice/pom.xml
+++ b/mealservice/pom.xml
@@ -70,6 +70,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Spring Boot Actuator for Health Checks -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- Eureka Client-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
