--- a/userservice/pom.xml
+++ b/userservice/pom.xml
@@ -86,6 +86,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Spring Boot Actuator for Health Checks -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- Eureka Client-->
 		<dependency>
     		<groupId>org.springframework.cloud</groupId>
