--- a/userservice/src/main/resources/application-docker.properties
+++ b/userservice/src/main/resources/application-docker.properties
@@ -29,6 +29,9 @@ services.authservice.url=http://auth-service:8005
 spring.data.redis.host=redis
 spring.data.redis.port=6379
 
+# Service URLs for Docker
+services.authservice.url=http://auth-service:8005
+
 # Eureka Configuration for Docker
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
