Update Project with config HAProxy

--- a/analystservice/src/main/resources/application-docker.properties
+++ b/analystservice/src/main/resources/application-docker.properties
@@ -35,11 +35,11 @@ springdoc.info.contact.email=contact@healthapp.com
 # Eureka Configuration for Docker
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=analyst-service
 
-# External Services - Docker container names
+# External Services - Docker IP addresses
 services.userservice.url=http://user-service:8006
 services.workoutservice.url=http://workout-service:8007
 services.mealservice.url=http://meal-service:8008
