--- a/apiservice/src/main/resources/application-docker.properties
+++ b/apiservice/src/main/resources/application-docker.properties
@@ -4,7 +4,7 @@ spring.application.name=apiservice
 server.port=8080
 
 # Eureka configuration for Docker
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=api-service
 
