--- a/discoveryserver/src/main/resources/application-docker.properties
+++ b/discoveryserver/src/main/resources/application-docker.properties
@@ -8,7 +8,7 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.server.enable-self-preservation=true
-eureka.instance.hostname=discovery-server
+eureka.instance.hostname=eureka-server
 
 # Eureka Timeouts
 eureka.server.response-cache-update-interval-ms=3000
