--- a/mealservice/src/main/resources/application-docker.properties
+++ b/mealservice/src/main/resources/application-docker.properties
@@ -24,11 +24,11 @@ security.jwt.expiration-time=3600000
 # Eureka Configuration for Docker
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=meal-service
 
-# External Services - Docker container names
+# External Services - Docker IP addresses
 services.userservice.url=http://user-service:8006
 
 # Redis Configuration for Docker
