--- a/authservice/src/main/resources/application-docker.properties
+++ b/authservice/src/main/resources/application-docker.properties
@@ -32,7 +32,7 @@ spring.data.redis.port=6379
 # Eureka Configuration for Docker
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=auth-service
 
