--- a/userservice/src/main/resources/application-docker.properties
+++ b/userservice/src/main/resources/application-docker.properties
@@ -29,13 +29,10 @@ services.authservice.url=http://auth-service:8005
 spring.data.redis.host=redis
 spring.data.redis.port=6379
 
-# Service URLs for Docker
-services.authservice.url=http://auth-service:8005
-
 # Eureka Configuration for Docker
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=user-service
 
